fix gap issue css-variables

--- a/03 - CSS Variables/src/index.scss
+++ b/03 - CSS Variables/src/index.scss
@@ -45,13 +45,13 @@ body {
 
 .ranges {
   @include center;
-  gap: 148px;
+  gap: 24px;
 }
 
 .label {
   @include center;
   flex-wrap: wrap;
-  gap: 18px;
+  gap: 8px;
   font-size: 24px;
   font-weight: 100;
 
